# ntlm_theft

./: .gitignore  MANIFEST.in  ntlm_theft.py  pyproject.toml  requirements.txt  setup.py
ntlm_theft/: __init__.py  __main__.py
ntlm_theft/files/: __init__.py  application.py  asx.py  autorun.py  bat.py  desktop.py  docx.py  htm.py  jnlp.py  libraryms.py  lnk.py  m3u.py  odt.py  pdf.py  rtf.py  scf.py  theme.py  url.py  wax.py  xlsx.py  xml.py  zoom.py
ntlm_theft/templates/: includepicture-template.xml
ntlm_theft/templates/docx-frameset-template/docProps/: core.xml
ntlm_theft/templates/docx-frameset-template/word/: document.xml  settings.xml  styles.xml
ntlm_theft/templates/docx-frameset-template/word/_rels/: webSettings.xml.rels
ntlm_theft/templates/docx-includepicture-template/docProps/: app.xml  core.xml
ntlm_theft/templates/docx-includepicture-template/word/: document.xml  settings.xml
ntlm_theft/templates/docx-includepicture-template/word/_rels/: document.xml.rels
ntlm_theft/templates/docx-remotetemplate-template/customXml/: itemProps1.xml  itemProps3.xml
ntlm_theft/templates/docx-remotetemplate-template/docProps/: custom.xml
ntlm_theft/templates/docx-remotetemplate-template/word/: document.xml  fontTable.xml
ntlm_theft/templates/docx-remotetemplate-template/word/_rels/: settings.xml.rels
templates/docx-frameset-template/word/: webSettings.xml
templates/docx-remotetemplate-template/docProps/: app.xml  core.xml
templates/docx-remotetemplate-template/word/: numbering.xml  settings.xml  styles.xml
