[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ntlm-theft"
version = "0.2.1"
description = "Generate multiple types of NTLMv2 hash theft files for penetration testing"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Jacob Wilkin", email = "greenwolf@protonmail.com"}
]
keywords = ["ntlm", "pentest", "security", "redteam", "hash-theft"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "xlsxwriter>=3.0.0",
]

[project.optional-dependencies]
odt = [
    "ezodf>=0.3.0",
    "lxml>=4.0.0",
]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
]

[project.scripts]
ntlm-theft = "ntlm_theft:main"

[project.urls]
Homepage = "https://github.com/Greenwolf/ntlm_theft"
Repository = "https://github.com/Greenwolf/ntlm_theft"
Issues = "https://github.com/Greenwolf/ntlm_theft/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
ntlm_theft = ["templates"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]
